--- a/.github/workflows/m3u_Generator_sneh.yml
+++ b/.github/workflows/m3u_Generator_sneh.yml
@@ -5,11 +5,11 @@ name: M3U generator
 # Controls when the action will run. 
 on:
   schedule:
-    - cron: '0 0/1 * * *'
+    - cron: '* * * * *'
 
   pull_request:
     branches:
-      - main
+      - snehAPI
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
